Update for AY2020-2021S1

--- a/research.html
+++ b/research.html
@@ -88,6 +88,21 @@
 
                 <hr />
 
+                <h5>Research Projects</h5>
+
+                <ul>
+                    <li>Blockchain empowered Internet-of-Vehicles towards Intelligent Transportation<br />
+                        <em>Principal Investigator</em>, NRF Tier-1 project, SCSE, NTU (Nov 2020 to May 2022)</li>
+                    <li>INDICATED : INtelligent Dashboard Interface for the Control of Air Traffic and Event Detection<br />
+                        <em>Principal Investigator</em>, SAAB-NTU Joint Lab, ATMRI, NTU (Jul 2020 to Jun 2021)</li>
+                    <li>FogChain : A blockchain-based P2P energy trading system<br />
+                         <em>Associated with research and development</em>, led by Prof Wen Yonggang (2019 to date)</li>
+                    <li><a href="http://scripts.ntu.edu.sg/Pages/default.aspx" target="_blank">SCRIPTS : Strategic Centre for Research in Privacy-Preserving Technologies and Systems</a><br />
+                         <em>Associated with research and development</em>, led by Prof Kwok-Yan Lam (2018 to date)</li>
+                </ul>
+    
+                <hr />
+
                 <h5>Journal Papers</h5>
 
                 <ol reversed>
