--- a/teaching.html
+++ b/teaching.html
@@ -87,6 +87,9 @@
                 <h5>Nanyang Technological University, Singapore</h5>
 
                 <ul>
+                    <li>AY 2020-2021 S1 -- Blockchain Technology (CE/CZ4153) -- Elective, Course Coordinator</li>
+                    <li>AY 2020-2021 S1 -- Introduction to Computational Thinking (CE/CZ1003) -- Example Classes</li>
+                    <li>AY 2020-2021 S1 -- <a href="http://scse.ntu.edu.sg/Programmes/CurrentStudents/Undergraduate/Documents/2018/CS/Year%202.pdf" target="_blank">Operating Systems (CE/CZ2005)</a> -- Laboratories and Tutorial Sessions</li>
                     <li>AY 2019-2020 S2 -- <a href="https://github.com/sgsourav/python-programming" target="_blank">Python Programming (AI6120)</a> -- Lab-based Bridging Course, MSAI</li>
                     <li>AY 2019-2020 S2 -- <a href="courses/cx1015.html">Introduction to Data Science and AI (CE/CZ1015)</a> -- Course Coordinator</li>
                     <li>AY 2019-2020 S2 -- <a href="courses/cz1016.html">Introduction to Data Science (CZ1016)</a> -- DSAI, Course Coordinator</li>
@@ -112,6 +115,8 @@
                 <h6>Professional Courses</h6>
 
                 <ul>
+                    <li><a href="http://www.ntc.ntu.edu.sg/Programmes/EntrepreneurshipDevelopmentProgrammes/Entrepreneurship%20Development%20Programmes%20(English)/Pages/SkillsFuture-Series-Cyber-Security.aspx" target="_blank">Network Security in Practice : Fundamentals of Network Security --  SkillsFuture Series on Cyber Security</a>, Nanyang Technopreneurship Centre, NTU -- Sep 2020</li>
+                    <li><a href="http://www.ntc.ntu.edu.sg/Programmes/EntrepreneurshipDevelopmentProgrammes/Entrepreneurship%20Development%20Programmes%20(English)/Pages/SkillsFuture-Series-Cyber-Security.aspx" target="_blank">Fundamentals of Cyber Security : Applied Cryptography --  SkillsFuture Series on Cyber Security</a>, Nanyang Technopreneurship Centre, NTU -- Aug 2020</li>
                     <li><a href="http://pace.ntu.edu.sg/LifelongLearning/PDP/SkillsFutureSeries/Pages/CourseDetail.aspx?EventId=a2bbedf4-5973-4030-b924-c56fa05c533e" target="_blank">Introduction to Data Science (basic) -- Top AI Skills to Learn
                             (SkillsFuture)</a>, Centre for Professional and Continuing Education, NTU -- Nov 2019, Mar 2020</li>
                     <li><a href="https://nbs.ntu.edu.sg/Programmes/Graduate/NANYANGEMBA/Academics/Pages/Leadership-4.0.aspx" target="_blank">Blockchain and its Impact on Business -- Module on Leadership 4.0</a>, Nanyang Executive MBA Programme,
