Teaching update for AY2020-2021 S1

--- a/courses/cx1115.html
+++ b/courses/cx1115.html
@@ -57,13 +57,11 @@
     <div class="row">
       <div class="twelve columns" style="margin-top: 5%">
 
-        <h5>Cx1015 : Introduction to Data Science and Artificial Intelligence</h5>
-
-        <blockquote>Updated in 2021 to <a href="cx1115.html">Introduction to Data Science and AI (CE/CZ1115)</a>. Please check the updated course webpage.</blockquote>
+        <h5>Cx1115 : Introduction to Data Science and Artificial Intelligence </h5>
 
         <p class="lead">Offered at First Year Second Semester for all students at the School of Computer Science and Engineering. Also offered to all undergraduate students under the College of Engineering, NTU.</p>
 
-        <blockquote>I designed the course in 2018, with <a href="https://personal.ntu.edu.sg/boan/" target="_blank">Bo An</a>, and I teach the Data Science part of the course. I also serve as the Coordinator for the course offered at SCSE, and help the other Schools under CoE in coordinating the course for their own students.</blockquote>
+        <blockquote>Updated the course <a href="cx1015.html">Cx1015</a>, originally designed in 2018. I teach the Data Science portion. I also serve as the Coordinator for the course offered at SCSE, and help the other Schools under CoE in coordinating the course for their own students.</blockquote>
 
         <hr />
 
@@ -76,7 +74,7 @@
 
         <p><i>In today's era of Information, 'Data' is the new driving force, provided we know how to extract relevant 'Intelligence'.</i></p>
 
-        <p>This course will start with the core principles of Data Science and will equip the students with the basic tools and techniques of data handling, exploratory data analysis, data visualization, data-based inference, and data-focused communication. The course will also introduce the students to the fundamentals of Artificial Intelligence, covering the basics of state space representation, uninformed search, and reinforcement learning. The course will motivate the students to work closely with data and make data-driven decisions in your field of study. The course will also touch upon ethical issues in Data Science and Artificial Intelligence and motivate the students to explore the cutting-edge applications related to Big Data, Neural Networks and Deep Learning. Python will be the language for computation.</p>
+        <p>This course will start with the core principles of Data Science, and will equip the students with the basic tools and techniques of data handling, exploratory data analysis, data visualization, data-based inference, and data-focused communication. The course will also introduce the students to the fundamentals of Artificial Intelligence -- state space, search problems, computer vision and natural language processing. The course will motivate the students to work closely with data and make data-driven decisions in their field of study. The course will also touch upon ethical issues in Data Science and Artificial Intelligence, and motivate the students to explore the cutting-edge applications related to Big Data, Neural Networks and Deep Learning. Python will be the language of choice for computation.</p>
 
         <h6>Course Material</h6>
 
