--- a/teaching.html
+++ b/teaching.html
@@ -87,8 +87,10 @@
                 <h5>Nanyang Technological University, Singapore</h5>
 
                 <ul>
-                    <li>AY 2020-2021 S1 -- Blockchain Technology (CE/CZ4153) -- Elective, Course Coordinator</li>
-                    <li>AY 2020-2021 S1 -- Introduction to Computational Thinking (CE/CZ1003) -- Example Classes</li>
+                    <li>AY 2020-2021 S2 -- <a href="courses/cx1115.html">Introduction to Data Science and AI (CE/CZ1115)</a> -- Course Coordinator</li>
+                    <li>AY 2020-2021 S2 -- <a href="courses/cz1016.html">Introduction to Data Science (CZ1016)</a> -- DSAI, Course Coordinator</li>
+                    <li>AY 2020-2021 S1 -- <a href="courses/cx4153.html">Blockchain Technology (CE/CZ4153)</a> -- Elective, Course Coordinator</li>
+                    <li>AY 2020-2021 S1 -- <a href="https://scse.ntu.edu.sg/Programmes/CurrentStudents/Undergraduate/Documents/2020/CourseDetails/Year1/CECZ1103%20Introduction%20to%20Computational%20Thinking%20and%20Programming.pdf" target="_blank">Intro to Comp. Thinking and Prog. (CE/CZ1103)</a> -- Example Classes</li>
                     <li>AY 2020-2021 S1 -- <a href="http://scse.ntu.edu.sg/Programmes/CurrentStudents/Undergraduate/Documents/2018/CS/Year%202.pdf" target="_blank">Operating Systems (CE/CZ2005)</a> -- Laboratories and Tutorial Sessions</li>
                     <li>AY 2019-2020 S2 -- <a href="https://github.com/sgsourav/python-programming" target="_blank">Python Programming (AI6120)</a> -- Lab-based Bridging Course, MSAI</li>
                     <li>AY 2019-2020 S2 -- <a href="courses/cx1015.html">Introduction to Data Science and AI (CE/CZ1015)</a> -- Course Coordinator</li>
