Updated till AY2020-2021
Updated all webpages till the current academic year AY2020-2021

--- a/activities.html
+++ b/activities.html
@@ -101,7 +101,12 @@
 
                 <h6>Services to School and University</h6>
                 <ul>
+                    <li>Fellow, Nanyang Technopreneurship Center, NTU Singapore (July 2021 to June 2023)</li>
                     <li>Assistant Chair (Admissions and Outreach), SCSE, NTU Singapore (since Apr 2020)</li>
+                    <li>Programme Coordinator, MS in Artificial intelligence, SCSE, NTU (since Oct 2021)</li>
+                    <li>Project Coordinator, MS in Artificial intelligence, SCSE, NTU (since Aug 2019)</li>
+                    <li>Faculty Advisor, NTU Open Source Society (since August 2020)</li>
+                    <li>Supporting Faculty Advisor, Blockchain at NTU Club (since 2018)</li>
                     <li>Member, Outreach Committee, SCSE, NTU Singapore (2018-2020)</li>
                     <li>Speaker and Facilitator, SCSE Open House, NTU Singapore (2019, 2020)</li>
                     <li>Judge, SCSE Computing Challenge, NTU Singapore (2019, 2020)</li>
@@ -129,6 +134,10 @@
 
                 <h6>Services to Public and the Industry</h6>
                 <ul>
+                    <li>Advisor on a Blockchain project, Daimler South East Asia Pte. Ltd. (since 2020)</li>
+                    <li>Invited Talk on Blockchain and Cryptocurrencies, ST Microelectronics (May 2021)</li>
+                    <li>Judge, HackAlliance 2021, NTU's first Interdisciplinary Hackathon</li>
+                    <li>Data Science Coffee Talk, Invited for a Webinar by Goldman Sachs (Mar 2021)</li>
                     <li>Judge, Singapore Science and Engineering Fair, SSEF 2020 2019</li>
                     <li>Public Lecture on Bitcoin, Local Outreach Committee, NTU Singapore (2018)</li>
                     <li>Panel Moderator, Women in Asia Blockchain Event, Science Park (2018)</li>
@@ -146,6 +155,20 @@
                 <h6>Final Year Projects (SCSE NTU)</h6>
 
                 <ul>
+                    <li>2022 : Alice Chua Qin Hui -- <i>Gap to Target Analysis of Critical Paths (AMD)</i></li>
+                    <li>2022 : Gautam Rohan -- <i>Exploring artificial intelligence to gain insight into sea-level variability and limits on the highest level of survival of corals in Singapore</i></li>
+                    <li>2022 : Ahmad Jazli Bin Abdul Razak -- <i>Bring Your Own Project : Machine Learning</i></li>
+                    <li>2022 : Koh Zhuang Chean -- <i>Bring Your Own Project : Blockchain Technology</i></li>
+                    <li>2022 : Adrian Goh Jun Wei -- <i>Automating Data Analysis Pipeline for School Review</i></li>
+                    <li>2022 : Reenashini Rajendran -- <i>Privacy-Preserving Knowledge Graphs</i></li>
+                    <li>2022 : Truong Cong Cuong -- <i>Network Analysis and Traceability on Ethereum Blockchain</i></li>
+                    <li>2022 : Phung Minh Khanh -- <i>Network Analysis and Traceability on Bitcoin Blockchain</i></li>
+                    <li>2022 : Tan Ke Xiang -- <i>Privacy of Blockchain-enabled Internet of Vehicles</i></li>
+                    <li>2022 : Ritik Bhatia -- <i>Design and Development of a Lifestyle Software or Product for Microsoft Imagine Cup 2022</i></li>
+                    <li>2021 : Bisakha Das -- <i>Learning Complex Fine-Grained Robotic Manipulation Tasks using AI</i></li>
+                    <li>2021 : Jiang Ji Xuan -- <i>Analytics-driven Intelligent Dashboard for Air Traffic Control</i></li>
+                    <li>2021 : Samuel Cheah Tien Zhi -- <i>Security of Blockchain-enabled Internet of Vehicles</i></li>
+                    <li>2021 : Koh Wei Xiang, Justin -- <i>Network Analysis and Traceability on Zcash Blockchain</i></li>
                     <li>2021 : Phua Jia Sheng -- <i>Network Analysis and Traceability on Monero Blockchain</i></li>
                     <li>2021 : Su Voon Hou -- <i>Network Analysis and Traceability on Ethereum Blockchain</i></li>
                     <li>2021 : Wang Ying -- <i>Privacy-Preserving Federated Learning using Differential Privacy</i></li>
@@ -178,6 +201,10 @@
                 <h6>Undergraduate Research Projects (SCSE NTU)</h6>
 
                 <ul>
+                    <li>2021 : Nguyen Viet Hoang -- <i>Liver Transplant Waitlist Prioritization through Data-driven Optimization</i> (Co-Sup)</li>
+                    <li>2021 : Leong Xin Yun -- <i>Liver Transplant Waitlist Prioritization for HCC Patients through Data-driven Optimization</i> (Co-Sup)</li>
+                    <li>2021 : Koh Yu Zhen -- <i>Analysis of Blockchain Scalability -- Scaling Computation vs. Scaling Data</i> (CNY Project)</li>
+                    <li>2021 : Koh Yu Zhen -- <i>Study on Robust DeepFake Detection and Prevention</i> (CNY Project)</li>
                     <li>2020 : Soham Dandapath -- <i>Privacy-Preserving Machine Learning Applications</i></li>
                     <li>2020 : Ritik Bhatia -- <i>Privacy-Preserving Machine Learning Applications</i></li>
                     <li>2020 : Jay Gupta -- <i>Privacy-Preserving Machine Learning Applications</i> (Co-Sup)</li>
@@ -187,7 +214,7 @@
                     <li>2020 : Su Huangyuan -- <i>Privacy-Preserving Smart Contracts for Public Blockchain</i></li>
                     <li>2020 : Phung Minh Khanh -- <i>Smart Contracts for managing IT service agreements at Daimler</i></li>
                     <li>2020 : Truong Cong Cuong -- <i>Smart Contracts for managing IT service agreements at Daimler</i> (Co-Sup)</li>
-                    <li>2019 : Ong Yu Hann -- <i>Analysis of Cryptocurrency Transaction Graphs</i></li>
+                    <li>2019 : Ong Yu Hann -- <i>Analysis of Cryptocurrency Transaction Graphs</i> (CNY Project)</li>
                 </ul>
 
                 <hr />
