--- a/random.html
+++ b/random.html
@@ -96,10 +96,18 @@
                     <li>I am extremely <a href="https://www.quietrev.com/the-introvert-test/?from=takethequiz" target="_blank">introverted</a> by nature, and public speaking used to be nerve-racking. I have quite painfully taught myself to <a
                             href="https://www.youtube.com/watch?v=BY6VntTmtIo" target="_blank">perform</a> when I teach or speak in front of large audiences.</li>
 
-                    <li><a href="https://en.wikipedia.org/wiki/Obsessive%E2%80%93compulsive_disorder" target="_blank">Obsessive–compulsive disorder</a> suits me well, I guess. Can't help, anyway. If you are curious, check that every single item in
+                    <li>Often, I tend to be obsessively particular about minor details. Can't help! If you are curious, check that every single item in
                         this list
                         <i>had to be</i> two full lines of text on a standard browser.</li>
                 </ul>
+
+                <hr />
+
+                <h5>Hidden Stories</h5>
+
+                <p>Observing the world from a distance leaves a lot to our imagination! Check the <a href="https://www.stevemccurry.com" target="_blank">master at work</a>.</p>
+
+                <img src="images/photography.jpg" alt="Observations from a Distance" style="width: 99%;">
 
                 <hr />
 
