--- a/teaching.html
+++ b/teaching.html
@@ -87,44 +87,51 @@
                 <h5>Nanyang Technological University, Singapore</h5>
 
                 <ul>
+                    <li>AY 2021-2022 S1 -- Applied Cryptography (CE/CZ4010) -- Elective (new course offering)</li>
+                    <li>AY 2021-2022 S1 -- <a href="courses/cx4153.html">Blockchain Technology (CE/CZ4153)</a> -- Elective, Course Coordinator</li>
+                    <li>AY 2021-2022 S1 -- <a href="https://github.com/sgsourav/python-programming" target="_blank">Python Programming (AI6120)</a> -- Lab-based Bridging Course, MSAI</li>
+                    <li>AY 2021-2022 S1 -- Navigating the Digital World (CC0002) -- Quantitative Reasoning</li>
+                    <li>AY 2021-2022 S1 -- Intro to Comp. Thinking and Prog. (CE/CZ1103) -- Tutorials and Labs</li>
                     <li>AY 2020-2021 S2 -- <a href="courses/cx1115.html">Introduction to Data Science and AI (CE/CZ1115)</a> -- Course Coordinator</li>
                     <li>AY 2020-2021 S2 -- <a href="courses/cz1016.html">Introduction to Data Science (CZ1016)</a> -- DSAI, Course Coordinator</li>
                     <li>AY 2020-2021 S1 -- <a href="courses/cx4153.html">Blockchain Technology (CE/CZ4153)</a> -- Elective, Course Coordinator</li>
-                    <li>AY 2020-2021 S1 -- <a href="https://scse.ntu.edu.sg/Programmes/CurrentStudents/Undergraduate/Documents/2020/CourseDetails/Year1/CECZ1103%20Introduction%20to%20Computational%20Thinking%20and%20Programming.pdf" target="_blank">Intro to Comp. Thinking and Prog. (CE/CZ1103)</a> -- Example Classes</li>
-                    <li>AY 2020-2021 S1 -- <a href="http://scse.ntu.edu.sg/Programmes/CurrentStudents/Undergraduate/Documents/2018/CS/Year%202.pdf" target="_blank">Operating Systems (CE/CZ2005)</a> -- Laboratories and Tutorial Sessions</li>
+                    <li>AY 2020-2021 S1 -- <a href="https://github.com/sgsourav/python-programming" target="_blank">Python Programming (AI6120)</a> -- Lab-based Bridging Course, MSAI</li>
+                    <li>AY 2020-2021 S1 -- Intro to Comp. Thinking and Prog. (CE/CZ1103) -- Example Classes</li>
+                    <li>AY 2020-2021 S1 -- Operating Systems (CE/CZ2005) -- Laboratories and Tutorial Sessions</li>
                     <li>AY 2019-2020 S2 -- <a href="https://github.com/sgsourav/python-programming" target="_blank">Python Programming (AI6120)</a> -- Lab-based Bridging Course, MSAI</li>
                     <li>AY 2019-2020 S2 -- <a href="courses/cx1015.html">Introduction to Data Science and AI (CE/CZ1015)</a> -- Course Coordinator</li>
                     <li>AY 2019-2020 S2 -- <a href="courses/cz1016.html">Introduction to Data Science (CZ1016)</a> -- DSAI, Course Coordinator</li>
                     <li>AY 2019-2020 S2 -- <a href="courses/cx4073.html">Data Science for Business (CE/CZ4073)</a> -- Elective, Course Coordinator</li>
                     <li>AY 2019-2020 S1 -- <a href="courses/cx1015.html">Introduction to Data Science and AI (CE/CZ1015)</a> -- Course Coordinator</li>
-                    <li>AY 2019-2020 S1 -- <a href="http://scse.ntu.edu.sg/Programmes/CurrentStudents/Undergraduate/Documents/2018/CS/Year%201.pdf" target="_blank">Introduction to Computational Thinking (CE/CZ1003)</a> -- Example Classes</li>
-                    <li>AY 2019-2020 S1 -- <a href="http://scse.ntu.edu.sg/Programmes/CurrentStudents/Undergraduate/Documents/2018/CS/5.%20EF%20for%20Cyber%20Security.pdf" target="_blank">Computer Security / Systems Security (CE/CZ4062)</a> --
+                    <li>AY 2019-2020 S1 -- Introduction to Computational Thinking (CE/CZ1003) -- Example Classes</li>
+                    <li>AY 2019-2020 S1 -- Computer Security / Systems Security (CE/CZ4062) --
                         Part-Time Students</li>
-                    <li>AY 2019-2020 S1 -- <a href="http://scse.ntu.edu.sg/Programmes/CurrentStudents/Undergraduate/Documents/2018/CS/Year%202.pdf" target="_blank">Algorithms (CE/CZ2001)</a> -- Laboratories (Project Presentations)</li>
+                    <li>AY 2019-2020 S1 -- Algorithms (CE/CZ2001) -- Laboratories (Project Presentations)</li>
                     <li>AY 2018-2019 Summer -- <a href="courses/cz1016.html">Introduction to Data Science (CZ1016)</a> -- Exchange Students</li>
                     <li>AY 2018-2019 S2 -- <a href="courses/cx1015.html">Introduction to Data Science and AI (CE/CZ1015)</a> -- Course Coordinator</li>
                     <li>AY 2018-2019 S2 -- <a href="courses/cz1016.html">Introduction to Data Science (CZ1016)</a> -- DSAI, Course Coordinator</li>
                     <li>AY 2018-2019 S2 -- <a href="courses/cx4073.html">Data Science for Business (CE/CZ4073)</a> -- Elective, Course Coordinator</li>
-                    <li>AY 2018-2019 S1 -- <a href="http://scse.ntu.edu.sg/Programmes/CurrentStudents/Undergraduate/Documents/2018/CS/Year%201.pdf" target="_blank">Introduction to Computational Thinking (CE/CZ1003)</a> -- Example Classes</li>
-                    <li>AY 2018-2019 S1 -- <a href="http://scse.ntu.edu.sg/Programmes/CurrentStudents/Undergraduate/Documents/2018/CS/5.%20EF%20for%20Cyber%20Security.pdf" target="_blank">Computer Security / Systems Security (CE/CZ4062)</a> --
+                    <li>AY 2018-2019 S1 -- Introduction to Computational Thinking (CE/CZ1003) -- Example Classes</li>
+                    <li>AY 2018-2019 S1 -- Computer Security / Systems Security (CE/CZ4062) --
                         Part-Time Students</li>
                     <li>AY 2017-2018 S2 -- <a href="courses/cx4073.html">Data Science for Business (CE/CZ4073)</a> -- Elective, Course Coordinator</li>
-                    <li>AY 2017-2018 S2 -- <a href="http://scse.ntu.edu.sg/Programmes/CurrentStudents/Undergraduate/Documents/2018/CS/5.%20EF%20for%20Cyber%20Security.pdf" target="_blank">Cryptography and Network Security (CE/CZ4024)</a> -- Part-Time
+                    <li>AY 2017-2018 S2 -- Cryptography and Network Security (CE/CZ4024) -- Part-Time
                         Students</li>
-                    <li>AY 2017-2018 S2 -- <a href="http://scse.ntu.edu.sg/Programmes/CurrentStudents/Undergraduate/Documents/2018/CS/Year%202.pdf" target="_blank">Operating Systems (CE/CZ2005)</a> -- Laboratories and Tutorial Sessions</li>
+                    <li>AY 2017-2018 S2 -- Operating Systems (CE/CZ2005) -- Laboratories and Tutorial Sessions</li>
                 </ul>
 
                 <h6>Professional Courses</h6>
 
                 <ul>
+                    <li><a href="https://blogs.ntu.edu.sg/edpntc/blockchain-2/" target="_blank">What is behind Crypto-Economics? -- Blockchain Innovation Strategy Programme (SkillsFuture)</a>, Nanyang Technopreneurship Centre, NTU -- Aug 2021, May 2020, Nov 2020, Apr 2019, Sep 2018</li>
+                    <li><a href="https://www.ntu.edu.sg/business/admissions/NEE/MiniMasters/minimasters-in-business-and-financial-analytics#Content_C016_Col00" target = "_blank">Design Thinking, Blockchain Technology Management and Cybersecurity -- MiniMasters in Business and Financial Analytics</a>, Nanyang Business School, NTU -- Jul 2021</li>
+                    <li><a href="http://www.ntc.ntu.edu.sg/Programmes/EntrepreneurshipDevelopmentProgrammes/Entrepreneurship%20Development%20Programmes%20(English)/Pages/SkillsFuture-Series-Cyber-Security.aspx" target="_blank">Fundamentals of Cyber Security : Applied Cryptography --  SkillsFuture Series on Cyber Security</a>, Nanyang Technopreneurship Centre, NTU -- July 2021, Aug 2020</li>                    
+                    <li><a href="https://www.ntu.edu.sg/ntc/programmes/professional-development/skillsfuture-series/fintech-disruption-for-the-future-of-finance-programme" target="_blank">The Evolution of Money and Payments --  SkillsFuture Series on FinTech Disruption</a>, Nanyang Technopreneurship Centre, NTU -- June 2021</li>
                     <li><a href="http://www.ntc.ntu.edu.sg/Programmes/EntrepreneurshipDevelopmentProgrammes/Entrepreneurship%20Development%20Programmes%20(English)/Pages/SkillsFuture-Series-Cyber-Security.aspx" target="_blank">Network Security in Practice : Fundamentals of Network Security --  SkillsFuture Series on Cyber Security</a>, Nanyang Technopreneurship Centre, NTU -- Sep 2020</li>
-                    <li><a href="http://www.ntc.ntu.edu.sg/Programmes/EntrepreneurshipDevelopmentProgrammes/Entrepreneurship%20Development%20Programmes%20(English)/Pages/SkillsFuture-Series-Cyber-Security.aspx" target="_blank">Fundamentals of Cyber Security : Applied Cryptography --  SkillsFuture Series on Cyber Security</a>, Nanyang Technopreneurship Centre, NTU -- Aug 2020</li>
                     <li><a href="http://pace.ntu.edu.sg/LifelongLearning/PDP/SkillsFutureSeries/Pages/CourseDetail.aspx?EventId=a2bbedf4-5973-4030-b924-c56fa05c533e" target="_blank">Introduction to Data Science (basic) -- Top AI Skills to Learn
-                            (SkillsFuture)</a>, Centre for Professional and Continuing Education, NTU -- Nov 2019, Mar 2020</li>
+                            (SkillsFuture)</a>, Centre for Professional and Continuing Education, NTU -- Mar 2020, Nov 2019</li>
                     <li><a href="https://nbs.ntu.edu.sg/Programmes/Graduate/NANYANGEMBA/Academics/Pages/Leadership-4.0.aspx" target="_blank">Blockchain and its Impact on Business -- Module on Leadership 4.0</a>, Nanyang Executive MBA Programme,
-                        Nanyang Business School, NTU -- Oct 2018, Nov 2019</li>
-                    <li><a href="https://blogs.ntu.edu.sg/edpntc/blockchain-2/" target="_blank">What is behind Crypto-Economics? -- Blockchain Innovation Strategy Programme (SkillsFuture)</a>, Nanyang Technopreneurship Centre, NTU -- Sep 2018, Apr
-                        2019</li>
+                        Nanyang Business School, NTU -- Nov 2019, Oct 2018</li>
                 </ul>
 
 
