--- a/research.html
+++ b/research.html
@@ -92,13 +92,13 @@
 
                 <ul>
                     <li>Blockchain empowered Internet-of-Vehicles towards Intelligent Transportation<br />
-                        <em>Principal Investigator</em>, MoE Tier-1 project, SCSE, NTU (Nov 2020 to May 2022)</li>
-                    <li>INDICATED : INtelligent Dashboard Interface for the Control of Air Traffic and Event Detection<br />
-                        <em>Principal Investigator</em>, SAAB-NTU Joint Lab, ATMRI, NTU (Jul 2020 to Jun 2021)</li>
+                        <em>Principal Investigator</em>, MoE Tier-1 project, SCSE, NTU (Nov 2020 to May 2022).</li>
+                    <li>SAAB-NTU Joint Lab, School of Mechanical and Aerospace Engineering, NTU<br />
+                        <em>Co-Principal Investigator</em>, associated with research and development (2020 to date).</li>
                     <li>FogChain : A blockchain-based P2P energy trading system<br />
-                         <em>Associated with research and development</em>, led by Prof Wen Yonggang (2019 to date)</li>
+                         <em>Co-Principal Investigator</em>, associated with research and development (2019 to date).</li>
                     <li><a href="http://scripts.ntu.edu.sg/Pages/default.aspx" target="_blank">SCRIPTS : Strategic Centre for Research in Privacy-Preserving Technologies and Systems</a><br />
-                         <em>Associated with research and development</em>, led by Prof Kwok-Yan Lam (2018 to date)</li>
+                         <em>Associated with research and development</em>, led by Prof Kwok-Yan Lam (2018 to date).</li>
                 </ul>
 
                 <hr />
@@ -154,6 +154,10 @@
                 <h5>Conference Papers</h5>
 
                 <ol reversed>
+                    <li><a href="publications/2021_www.pdf">Temporal Analysis of the Entire Ethereum Blockchain Network</a><br />
+                        Lin Zhao, Sourav Sen Gupta, Arijit Khan, and Robby Luo<br />
+                        <i>Proceedings of The Web Conference, WWW 2021</i></li>
+
                     <li><a href="publications/2020_www.pdf">Measurements, Analyses, and Insights on the Entire Ethereum Blockchain Network</a><br />
                         Xi Tong Lee, Arijit Khan, Sourav Sen Gupta, Yu Hann Ong, and Xuan Liu<br />
                         <i>Proceedings of The Web Conference, WWW 2020</i></li>
