--- a/activities.html
+++ b/activities.html
@@ -167,7 +167,7 @@
                     <li>2022 : Ritik Bhatia -- <i>Design and Development of a Lifestyle Software or Product for Microsoft Imagine Cup 2022</i></li>
                     <li>2021 : Bisakha Das -- <i>Learning Complex Fine-Grained Robotic Manipulation Tasks using AI</i></li>
                     <li>2021 : Jiang Ji Xuan -- <i>Analytics-driven Intelligent Dashboard for Air Traffic Control</i></li>
-                    <li>2021 : Samuel Cheah Tien Zhi -- <i>Security of Blockchain-enabled Internet of Vehicles</i></li>
+                    <li>2021 : Samuel Cheah Tien Zhi -- <i>Accident Dashboard for Internet of Vehicles</i></li>
                     <li>2021 : Koh Wei Xiang, Justin -- <i>Network Analysis and Traceability on Zcash Blockchain</i></li>
                     <li>2021 : Phua Jia Sheng -- <i>Network Analysis and Traceability on Monero Blockchain</i></li>
                     <li>2021 : Su Voon Hou -- <i>Network Analysis and Traceability on Ethereum Blockchain</i></li>
