--- a/research.html
+++ b/research.html
@@ -76,7 +76,7 @@
 
                 <h2>Research</h2>
 
-                <p class="lead">My primary research interest is in the field of Cryptology and Cybersecurity. At present, I take an active interest in the evolving research areas of Privacy Preserving technologies, Cryptocurrencies and Blockchain
+                <p class="lead">My primary research interest is in the field of Cryptology and Cybersecurity. At present, I take an active interest in the evolving research areas of Privacy-Preserving Technologies, Cryptocurrencies and Blockchain
                     Technology,
                     as well as in applications of Data Mining and Machine Learning in these areas. In addition to the above interests, I am also inclined towards some topics in Number Theory that have close ties with security and privacy
                     applications.</p>
@@ -92,7 +92,7 @@
 
                 <ul>
                     <li>Blockchain empowered Internet-of-Vehicles towards Intelligent Transportation<br />
-                        <em>Principal Investigator</em>, MoE Tier-1 project, SCSE, NTU (Nov 2020 to May 2022).</li>
+                        <em>Co-Principal Investigator</em>, MoE Tier-1 project, SCSE, NTU (Nov 2020 to May 2022).</li>
                     <li>SAAB-NTU Joint Lab, School of Mechanical and Aerospace Engineering, NTU<br />
                         <em>Co-Principal Investigator</em>, associated with research and development (2020 to date).</li>
                     <li>FogChain : A blockchain-based P2P energy trading system<br />
