--- a/activities.html
+++ b/activities.html
@@ -58,7 +58,7 @@
             <div class="three columns collapse" style="margin-top: 5%">
                 <img class="profile" src="images/sourav_profile.png">
                 <p> </p>
-                <h6>Lecturer and Assistant Chair (Admissions and Outreach)</h6>
+                <h6>Lecturer</h6>
                 <p>School of Computer Science and Engineering, Nanyang Technological University</p>
                 <p>50 Nanyang Avenue, Singapore 639798</p>
                 <p>Office : N4-02b-45<br />
@@ -102,11 +102,11 @@
                 <h6>Services to School and University</h6>
                 <ul>
                     <li>Fellow, Nanyang Technopreneurship Center, NTU Singapore (July 2021 to June 2023)</li>
-                    <li>Assistant Chair (Admissions and Outreach), SCSE, NTU Singapore (since Apr 2020)</li>
-                    <li>Programme Coordinator, MS in Artificial intelligence, SCSE, NTU (since Oct 2021)</li>
-                    <li>Project Coordinator, MS in Artificial intelligence, SCSE, NTU (since Aug 2019)</li>
-                    <li>Faculty Advisor, NTU Open Source Society (since August 2020)</li>
-                    <li>Supporting Faculty Advisor, Blockchain at NTU Club (since 2018)</li>
+                    <li>Assistant Chair (Admissions and Outreach), SCSE, NTU Singapore (Apr 2020 to Mar 2022)</li>
+                    <li>Programme Coordinator, MS in Artificial intelligence, SCSE, NTU (Oct 2021 to Jul 2022)</li>
+                    <li>Project Coordinator, MS in Artificial intelligence, SCSE, NTU (Aug 2019 to Jul 2022)</li>
+                    <li>Faculty Advisor, NTU Open Source Society (Aug 2020 to Apr 2022)</li>
+                    <li>Supporting Faculty Advisor, Blockchain at NTU Club (2018 to 2022)</li>
                     <li>Member, Outreach Committee, SCSE, NTU Singapore (2018-2020)</li>
                     <li>Speaker and Facilitator, SCSE Open House, NTU Singapore (2019, 2020)</li>
                     <li>Judge, SCSE Computing Challenge, NTU Singapore (2019, 2020)</li>
