--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="three columns homepage" style="margin-top: 5%">
                 <img class="profile" src="images/sourav_profile.png">
                 <p> </p>
-                <h6>Lecturer and Assistant Chair (Admissions and Outreach)</h6>
+                <h6>Lecturer</h6>
                 <p>School of Computer Science and Engineering, Nanyang Technological University</p>
                 <p>50 Nanyang Avenue, Singapore 639798</p>
                 <p>Office : N4-02b-45<br />
