--- a/activities.html
+++ b/activities.html
@@ -123,6 +123,7 @@
 
                 <h6>Services to the Academic Community</h6>
                 <ul>
+                    <li>Organizer, CAAW, Workshop on Cryptoasset Analytics, with TheWebConf (2022)</li>
                     <li>Program Co-Chair, INDOCRYPT 2019, Hyderabad, India (Dec 2019)</li>
                     <li>Web and Publicity Chair, SPACE 2018, Kanpur, India (Dec 2018)</li>
                     <li>Organizing Committee -- SPACE 2018, VLSI Design 2016, INDOCRYPT 2016 2013 2012</li>
