--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <h5>Professional Experience</h5>
 
                 <ul>
-                    <li>Since 2018 : Lecturer -- <a href="http://scse.ntu.edu.sg/Pages/Home.aspx" target="_blank">School of Computer Science and Engineering, NTU Singapore</a></li>
+                    <li>2018-2022 : Lecturer -- <a href="http://scse.ntu.edu.sg/Pages/Home.aspx" target="_blank">School of Computer Science and Engineering, NTU Singapore</a></li>
                     <li>May-Dec 2017 : Visiting Lecturer -- <a href="http://www.isical.ac.in/~rcbose" target="_blank">R C Bose Centre, Indian Statistical Institute</a></li>
                     <li>2014-2017 : Lecturer-cum-PDF -- <a href="http://www.isical.ac.in/~rcbose" target="_blank">R C Bose Centre, Indian Statistical Institute</a></li>
                     <li>2011-2014 : Researcher -- <a href="http://www.isical.ac.in/~coec" target="_blank">Centre of Excellence in Cryptology, Indian Statistical Institute</a></li>
