--- a/research.html
+++ b/research.html
@@ -92,13 +92,15 @@
 
                 <ul>
                     <li>Blockchain empowered Internet-of-Vehicles towards Intelligent Transportation<br />
-                        <em>Co-Principal Investigator</em>, MoE Tier-1 project, SCSE, NTU (Nov 2020 to May 2022).</li>
+                        <em>Co-Principal Investigator</em>, MoE Tier-1 project, SCSE, NTU (2020 to 2022).</li>
                     <li>SAAB-NTU Joint Lab, School of Mechanical and Aerospace Engineering, NTU<br />
-                        <em>Co-Principal Investigator</em>, associated with research and development (2020 to date).</li>
+                        <em>Co-Principal Investigator</em>, associated with research and development (2020 to 2022).</li>
+                    <li>Machine Learning for Airport Management and Tower Control<br /> 
+                        <em>Co-Principal Investigator</em>, with SAAB-NTU Joint Lab, MAE, NTU (2020–2021)</li>
                     <li>FogChain : A blockchain-based P2P energy trading system<br />
-                         <em>Co-Principal Investigator</em>, associated with research and development (2019 to date).</li>
+                        <em>Co-Principal Investigator</em>, associated with research and development (2019 to 2022).</li>
                     <li><a href="http://scripts.ntu.edu.sg/Pages/default.aspx" target="_blank">SCRIPTS : Strategic Centre for Research in Privacy-Preserving Technologies and Systems</a><br />
-                         <em>Associated with research and development</em>, led by Prof Kwok-Yan Lam (2018 to date).</li>
+                         <em>Associated with research and development</em>, led by Prof Kwok-Yan Lam (2018 to 2022).</li>
                 </ul>
 
                 <hr />
@@ -154,6 +156,10 @@
                 <h5>Conference Papers</h5>
 
                 <ol reversed>
+                    <li>Automating ETL and Mining of Ethereum Blockchain Network.<br />
+                        Voon Hou Su, Sourav Sen Gupta, and Arijit Khan<br />
+                        <i>Proceedings of the International Conference on Web Search and Data Mining, WSDM 2022</i></li>
+
                     <li><a href="publications/2021_www.pdf">Temporal Analysis of the Entire Ethereum Blockchain Network</a><br />
                         Lin Zhao, Sourav Sen Gupta, Arijit Khan, and Robby Luo<br />
                         <i>Proceedings of The Web Conference, WWW 2021</i></li>
