--- a/teaching.html
+++ b/teaching.html
@@ -87,6 +87,8 @@
                 <h5>Nanyang Technological University, Singapore</h5>
 
                 <ul>
+                    <li>AY 2021-2022 S2 -- <a href="courses/cx1115.html">Introduction to Data Science and AI (SC1015)</a> -- Course Coordinator</li>
+                    <li>AY 2021-2022 S2 -- Introduction to Data Analytics (SC5010) -- Computing Minor, Course Coordinator</li>
                     <li>AY 2021-2022 S1 -- Applied Cryptography (CE/CZ4010) -- Elective (new course offering)</li>
                     <li>AY 2021-2022 S1 -- <a href="courses/cx4153.html">Blockchain Technology (CE/CZ4153)</a> -- Elective, Course Coordinator</li>
                     <li>AY 2021-2022 S1 -- <a href="https://github.com/sgsourav/python-programming" target="_blank">Python Programming (AI6120)</a> -- Lab-based Bridging Course, MSAI</li>
