--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
             <div class="three columns homepage" style="margin-top: 5%">
                 <img class="profile" src="images/sourav_profile.png">
                 <p> </p>
-                <h6>Lecturer</h6>
-                <p>School of Computer Science and Engineering, Nanyang Technological University</p>
-                <p>50 Nanyang Avenue, Singapore 639798</p>
+                <p><strong>Lecturer</strong>, School of Computer Science and Engineering</p>
+                <p>Nanyang Technological University, 50 Nanyang Avenue, Singapore 639798</p>
                 <p>Office : N4-02b-45<br />
                     Phone : +65 6790 4587<br />
                     <strong>sg.sourav@ntu.edu.sg</strong></p>
