--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>Sen Gupta | Sourav</title>
-    <meta name="description" content="Official website of Sourav Sen Gupta">
-    <meta name="author" content="Sourav Sen Gupta">
-    <meta name="keywords" content="Sourav Sen Gupta, Cryptography, Privacy, Blockchain, Mathematics, Data Science, Machine Learning">
+    <title>Sengupta | Sourav</title>
+    <meta name="description" content="Official website of Sourav Sengupta">
+    <meta name="author" content="Sourav Sengupta">
+    <meta name="keywords" content="Sourav Sen Gupta, Sourav Sengupta, Computer Architecture, Cryptography, Privacy, Blockchain, Mathematics, Data Science, Machine Learning">
 
     <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -41,28 +41,27 @@
     <div class="container">
         <div class="row">
             <div class="three columns homepage" style="margin-top: 5%">
-                <a class="nav-link active" href="index.html">Sourav SEN GUPTA</a>
+                <a class="nav-link active" href="index.html">Sourav Sengupta</a>
             </div>
             <div class="nine columns collapse" style="margin-top: 5%">
-                <div class="nav">
+                <!-- <div class="nav">
                     <ul class="nav-list">
                         <li class="nav-item"><a class="nav-link" href="teaching.html">teaching</a></li>
                         <li class="nav-item"><a class="nav-link" href="research.html">research</a></li>
                         <li class="nav-item"><a class="nav-link" href="activities.html">activities</a></li>
                         <li class="nav-item"><a class="nav-link" href="random.html">random</a></li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="row">
             <div class="three columns homepage" style="margin-top: 5%">
                 <img class="profile" src="images/sourav_profile.png">
                 <p> </p>
-                <p><strong>Lecturer</strong>, School of Computer Science and Engineering</p>
-                <p>Nanyang Technological University, 50 Nanyang Avenue, Singapore 639798</p>
-                <p>Office : N4-02b-45<br />
-                    Phone : +65 6790 4587<br />
-                    <strong>sg.sourav@ntu.edu.sg</strong></p>
+                <p><strong>Researcher</strong>, Compute System Architecture</p>
+                <p>imec, Kapeldreef 75<br />
+                    3001 Leuven, Belgium</p>
+                <p>Sourav.Sengupta@imec.be</p>
                 <h4>
                     <a href="https://sg.linkedin.com/in/sg-sourav" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/sgsourav" target="_blank"><i class="fab fa-github-square"></i></a>
@@ -72,11 +71,9 @@
                 </h4>
             </div>
             <div class="nine columns collapse" style="margin-top: 5%">
-                <p class="lead">I am a Teacher and Researcher, positioned precariously at the confluence of Computer Science, Mathematics and Engineering. While my research area and interest revolves around the &quot;science of security&quot;
-                    (primarily
-                    focused on cryptology), I love to teach the &quot;art of analytics&quot; (broadly dealing with data science). I enjoy learning new things and explore new technical domains. Essentially, I remain an ardent student of Mathematics
-                    and
-                    Computing.</p>
+                <p class="lead">I am a Researcher (and still a Teacher at heart), positioned precariously at the confluence of Computer Science, Mathematics and Engineering. ;-)</p>
+                <p class="lead">My current research area revolves around designing efficient and scalable micro-architecture for next-generation High-Performance Computing and Artificial Intelligence. In my previous (academic) life, I took an active interest in studying the &quot;science of security&quot; (primarily focused on cryptology), while teaching the &quot;art of analytics&quot; (broadly dealing with data science).</p> 
+                <p class="lead">I truly enjoy learning new things and exploring new technical domains. Essentially, I remain an ardent student of Mathematics and Computing.</p>
 
                 <blockquote>I will be glad to share my CV, with further professional details, if you are interested. You may also check out my professional profile on <a href="https://sg.linkedin.com/in/sg-sourav" target="_blank"><i
                             class="fab fa-linkedin"></i> LinkedIn</a> and publications on <a href="https://dblp.uni-trier.de/pers/hd/g/Gupta:Sourav_Sen" target="_blank"><i class="ai ai-dblp-square"></i> dblp</a>.</blockquote>
@@ -86,6 +83,7 @@
                 <h5>Professional Experience</h5>
 
                 <ul>
+                    <li>Since 2022 : Researcher -- Compute System Architecture (CSA), <a href="https://www.imec-int.com/en" target="_blank">imec Leuven, Belgium</a></li>
                     <li>2018-2022 : Lecturer -- <a href="http://scse.ntu.edu.sg/Pages/Home.aspx" target="_blank">School of Computer Science and Engineering, NTU Singapore</a></li>
                     <li>May-Dec 2017 : Visiting Lecturer -- <a href="http://www.isical.ac.in/~rcbose" target="_blank">R C Bose Centre, Indian Statistical Institute</a></li>
                     <li>2014-2017 : Lecturer-cum-PDF -- <a href="http://www.isical.ac.in/~rcbose" target="_blank">R C Bose Centre, Indian Statistical Institute</a></li>
