--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="three columns homepage" style="margin-top: 5%">
                 <img class="profile" src="images/sourav_profile.png">
                 <p> </p>
-                <p><strong>Researcher</strong>, Compute System Architecture</p>
+                <p><strong>Principal Member of Technical Staff</strong> and <strong>R&D Team Leader (CoMPASS)</strong>, Compute System Architecture</p>
                 <p>imec, Kapeldreef 75<br />
                     3001 Leuven, Belgium</p>
                 <p>Sourav.Sengupta@imec.be</p>
@@ -83,7 +83,9 @@
                 <h5>Professional Experience</h5>
 
                 <ul>
-                    <li>Since 2022 : Researcher -- Compute System Architecture (CSA), <a href="https://www.imec-int.com/en" target="_blank">imec Leuven, Belgium</a></li>
+                    <li>Since Dec 2023 : Principal Member of Technical Staff -- CSA, <a href="https://www.imec-int.com/en" target="_blank">imec Leuven, Belgium</a></li>
+                    <li>Since Apr 2023 : R&D Team Leader -- CoMPASS, FuSE, CSA, <a href="https://www.imec-int.com/en" target="_blank">imec Leuven, Belgium</a></li>
+                    <li>2022-2023 : Researcher -- Compute System Architecture (CSA), <a href="https://www.imec-int.com/en" target="_blank">imec Leuven, Belgium</a></li>
                     <li>2018-2022 : Lecturer -- <a href="http://scse.ntu.edu.sg/Pages/Home.aspx" target="_blank">School of Computer Science and Engineering, NTU Singapore</a></li>
                     <li>May-Dec 2017 : Visiting Lecturer -- <a href="http://www.isical.ac.in/~rcbose" target="_blank">R C Bose Centre, Indian Statistical Institute</a></li>
                     <li>2014-2017 : Lecturer-cum-PDF -- <a href="http://www.isical.ac.in/~rcbose" target="_blank">R C Bose Centre, Indian Statistical Institute</a></li>
