--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <h4>
                     <a href="https://sg.linkedin.com/in/sg-sourav" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/sgsourav" target="_blank"><i class="fab fa-github-square"></i></a>
-                    <a href="https://dblp.uni-trier.de/pers/hd/g/Gupta:Sourav_Sen" target="_blank"><i class="ai ai-dblp-square"></i></a>
+                    <a href="https://dblp.org/pid/41/8030.html" target="_blank"><i class="ai ai-dblp-square"></i></a>
                     <a href="https://scholar.google.com/citations?user=I8gZp-gAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square"></i></a>
                     <a href="https://orcid.org/0000-0002-4197-582X" target="_blank"><i class="ai ai-orcid-square"></i></a>
                 </h4>
@@ -75,8 +75,8 @@
                 <p class="lead">My current research area revolves around designing efficient and scalable micro-architecture for next-generation High-Performance Computing and Artificial Intelligence. In my previous (academic) life, I took an active interest in studying the &quot;science of security&quot; (primarily focused on cryptology), while teaching the &quot;art of analytics&quot; (broadly dealing with data science).</p> 
                 <p class="lead">I truly enjoy learning new things and exploring new technical domains. Essentially, I remain an ardent student of Mathematics and Computing.</p>
 
-                <blockquote>I will be glad to share my CV, with further professional details, if you are interested. You may also check out my professional profile on <a href="https://sg.linkedin.com/in/sg-sourav" target="_blank"><i
-                            class="fab fa-linkedin"></i> LinkedIn</a> and publications on <a href="https://dblp.uni-trier.de/pers/hd/g/Gupta:Sourav_Sen" target="_blank"><i class="ai ai-dblp-square"></i> dblp</a>.</blockquote>
+                <blockquote>I will be glad to share my CV, with further details, if you are interested. You may also check out my professional profile on <a href="https://sg.linkedin.com/in/sg-sourav" target="_blank"><i
+                            class="fab fa-linkedin"></i> LinkedIn</a> and my publications on <a href="https://dblp.org/pid/41/8030.html" target="_blank"><i class="ai ai-dblp-square"></i> dblp</a> or <a href="https://scholar.google.com/citations?user=I8gZp-gAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square"></i> google scholar</a>.</blockquote>
 
                 <hr />
 
